tests/cases/smoke/invalid/mixed_type_list.dp
var values = [1, "a", true]
